# tinyRAG_pipeline

./: .gitignore  COMPARISON.md  MEMORY_OPTIMIZATION.md  ONNX_OPTIMIZATION_FEASIBILITY.md  X230_OPENVINO_ASSESSMENT.md  __init__.py  __main__.py  config.py  config.yaml  items_store.py  pyproject.toml  requirements.txt  schema_v0.3.3.sql  test_memory.py  vacuum.py
chunker/: markdown_splitter.py
cli/: __init__.py  main.py
data/: jieba_user_dict.txt
embedder/: embed_engine.py  model_factory.py
helpers/: __init__.py  fts_content.py  json_serialize.py  logger.py
mcp_adapter/: __init__.py  server.py
pipeline/: __init__.py  context.py  events.py  pipeline.py  stage.py
pipeline/stages/: __init__.py  chunk_stage.py  config_stage.py  embed_stage.py  index_stage.py  maintenance_stage.py  scan_stage.py  search_stage.py
prompts/: prompt_search_with_context.md  prompt_summarize_document.md
retriever/: hybrid_engine.py
scanner/: scan_engine.py
storage/: cache.py  database.py
utils/: dedup.py  jieba_helper.py  logger.py
