[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tinyRAG-pipeline"
version = "0.1.0"
description = "tinyRAG refactored with CLI + Pipeline architecture"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "loguru>=0.7",
    "jieba>=0.42",
    "fastembed>=0.2",
    "numpy>=1.24",
    "tqdm>=4.65",
]

[project.optional-dependencies]
mcp = ["mcp>=0.9"]
dev = ["pytest>=7.0", "ruff>=0.1"]

[project.scripts]
tinyrag = "cli.main:app"

[tool.ruff]
line-length = 120
target-version = "py310"
