[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tinyRAG-pipeline"
version = "0.1.0"
description = "tinyRAG refactored with CLI + Pipeline architecture"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.24.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "loguru>=0.7.0",
    "jieba>=0.42",
    "fastembed>=0.7.0",
    "numpy>=1.24",
    "tqdm>=4.65",
    "tiktoken>=0.7",
    "sqlite-vec>=0.1.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=0.9",
    "httpx>=0.28.0",
    "sse-starlette>=3.0.0",
    "uvicorn>=0.42.0",
]
dev = ["pytest>=7.0", "ruff>=0.1"]

[project.scripts]
tinyrag = "cli.main:app"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
"cli/main.py" = ["E402"]
"mcp_adapter/server.py" = ["E402"]

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*", "mcp_adapter*", "pipeline*"]
